2004-05-25  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/misc/aspects.py: Added TimerAspect (a per function profiler)
	* gaphor/ui/namespace.py: Now sorting works okay. Implemented faster
	sorting algorithm.
	* gaphor/diagram/dependency.py: Added load/save instructions for
	dependency_type.
	* gaphor/diagram/interface.py: new file, representing an Interface.

2004-05-24  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/menufactory.py: fixed a few bugs
	* gaphor/diagram/relationship.py: made a generic find_relationship()
	function.
	* gaphor/diagram/(dependency|generalization|flow).py: use this
	function.

2004-05-17  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/misc/action.py: no longer register actions as stock items.
	* gaphor/ui/menufactory.py: make accelerators work for menu items.

2004-05-13  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* data/pixmaps/extension24.png initalnode24.png,
	activityfinalnode24.png, activityfinalnode.xcf: added
	* gaphor/ui/stock.py: added the new icons as stock icons.
	* data/pixmaps/: removed unused (old) icons. Added icons for Actions,
	stereotype, extension, etc.
	

2004-05-12  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/extension.py: new file. Used to create stereotypes
	* gaphor/diagram/klass.py: started implementing stereotypes.
	* gaphor/diagram/dependency.py: Now one can add several dependency
	types, such as Usage and Realization (the dependency may not be
	connected on both sides for this option to work).

2004-05-10  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/dependency.py, generalization.py: fixed bug which
	avoids adding multiple dependencies/generalizations between two
	classes.
	* gaphor/ui/wrapbox.py: new file. replaces the C GtkWrapBox library.
	* gaphor/ui/stereotypewindow.py: new file. This dialog should be used
	to add/edit stereotypes.

2004-05-07  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/menufactory.py: reordered some code, added function